0.0.4
    o remove moduleLabel
0.0.3
    o fix issue saving parameters for line plot, add error tracking around plot preview
0.0.2
    o include possibility to display selected modules and include default modules
0.0.1
    o initial commit