@@ -5,25 +5,19 @@ uiFunction <- function(request){
 	fluidPage(
 			
 		# For debugging
-		h4("Debugging & testing options"), 
-		fluidRow(
-			column(4, 
-				tags$b("Print objects"),
-				verbatimTextOutput("debug_text")
-			),
-			column(4, 
-				tags$b("Connect with console"),
-				helpText(HTML("The console will display a Browse prompt: <code>Browse[1]></code>")),
-				helpText(HTML("Enter <code>c</code> at the prompt to stop communication with the console and resume with the shiny app")),
-				actionButton(inputId = "debug_console", label = "Connect with console")
-			),
-			column(4,
-				tags$b("Save current state"),
-				verbatimTextOutput("debug_bookmark"),
-				tags$br(),
-				bookmarkButton()
-			)
-		),
+#		h4("Debugging & testing options"), 
+#		fluidRow(
+#			column(4, 
+#				tags$b("Print objects"),
+#				verbatimTextOutput("debug_text")
+#			),
+#			column(4, 
+#				tags$b("Connect with console"),
+#				helpText(HTML("The console will display a Browse prompt: <code>Browse[1]></code>")),
+#				helpText(HTML("Enter <code>c</code> at the prompt to stop communication with the console and resume with the shiny app")),
+#				actionButton(inputId = "debug_console", label = "Connect with console")
+#			)
+#		),
 		
 		titlePanel(title = div(img(
 			src = "logo-with-fish.png", 
